--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
-    <%- include('./partials/head.ejs') %>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pokemon</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
 
@@ -12,8 +16,6 @@
 <header>
     <div class="head" ></div>
 </header> 
-
-
 
 
 
